[package]
name = "discord_mv"
version = "0.1.0"
edition = "2024"
keywords = ["discord", "bot", "messages", "move"]
license = "MIT"

[dependencies]
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.145"
serenity = "0.12.4"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }

